1999-01-27  Harri Porten  <porten@kde.org>

	* pppstats.cpp: removed debug output
	* opener.cpp: delay closing the tty fd. Otherwise the ioctl() in
	execpppd() can't succeed.
	* opener.cpp: ignore TERM and INT signals. This is probably the
	best until a safe clean-up & terminate routine is written.
	* connect.cpp: added a removedns() call to cancelbutton().

1999-01-25  Mario Weilguni <mweilguni@kde.org>

	* updated and regenerated documentation
	
1999-01-23  Harri Porten  <porten@kde.org>

	* main.cpp: config data wasn't saved on immediate exit.

1999-01-22  Harri Porten  <porten@kde.org>

	* moved pppd call to the server process. It should be safer and
	much more comfortable that pppd doesn't need to be installed SUID
	root anymore. If I don't get any negative feedback I'll remove
	some doubled code later. 

1999-01-17  Harri Porten  <porten@kde.org>

	* modeminfo.cpp: ATI1 was left out. Wait 0.1 secs to process the ATE0.

1999-01-14  Mario Weilguni <mweilguni@kde.org>

	* Most windows should now have the mini-icon
	* the lineedit for the modem timeout was too narrow to see at
	least 2 characters. Fixed it, now shows at least 4 chars
	* double-clicking an account in the account-listbox now opens 
	the account for editing, as expected
	* for some weird reason, the lineedit showing costs and volume
	were both editable, thus letting users think they can edit
	it. Fixed that.

1999-01-12  Harri Porten  <porten@kde.org>

	* connect.cpp: become the session leader and let ttySx be the
	controlling terminal before launching pppd. This might solve
	timeout problems several people reported, ie. when kppp was
	started from kpanel instead of a terminal window.
	* main.cpp: the kppp.sh workaround for make_directories() isn't
	needed anymore and confused a few people.
	* requester.cpp: convert cmsglen to size_t to make the compiler happy.
	* modem.cpp: fixed usleep() replacement in case #ifndef HAVE_USLEEP
	* connect.cpp: saving of old_hostname was broken
