@@ -1,3 +1,3 @@
 #ifndef KPPPVERSION
-#define KPPPVERSION "1.5.39 (Release 176)"
+#define KPPPVERSION "1.5.40 (Release 177)"
 #endif
